AC_INIT([executable], [1.0.0], [<email-address@here.com>])

AM_INIT_AUTOMAKE([subdir-objects])
LT_INIT

AC_LANG(C++)
AC_LANG(C)

AC_PROG_CXX
AC_PROG_CC_C_O
AC_PROG_RANLIB

AC_CONFIG_MACRO_DIR([m4])

AC_HEADER_STDC
AM_SILENT_RULES([yes])

# --- check headers ---

# --- check libraries ---

# --- compile args ---

# --- ready ----
AC_CONFIG_FILES([Makefile])
AC_OUTPUT

# --- summary ---
AC_MSG_NOTICE([Ready...])
